@@ -5,7 +5,7 @@
 '\" See the file "license.terms" for information on usage and redistribution
 '\" of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 '\" 
-'\" RCS: @(#) $Id: upvar.n,v 1.5 2000/11/21 15:56:21 dkf Exp $
+'\" RCS: @(#) $Id: upvar.n,v 1.6 2004/04/28 13:11:33 msofer Exp $
 '\" 
 .so man.macros
 .TH upvar n "" Tcl "Tcl Built-In Commands"
@@ -35,8 +35,8 @@ call;  it will be created the first time \fImyVar\fR is referenced, just like
 an ordinary variable.  There must not exist a variable by the
 name \fImyVar\fR at the time \fBupvar\fR is invoked.
 \fIMyVar\fR is always treated as the name of a variable, not an
-array element.  Even if the name looks like an array element,
-such as \fBa(b)\fR, a regular variable is created.
+array element.  An error is returned if the name looks like an array element,
+such as \fBa(b)\fR.
 \fIOtherVar\fR may refer to a scalar variable, an array,
 or an array element.
 \fBUpvar\fR returns an empty string.
